# vulkan-playground

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile-shaders.bat  compile_commands.json  rules.ninja  run.bat  vulkan-playground.sublime-project  vulkan-playground.sublime-workspace
include/: camera.h  engine.h  types.h  vulkan_init.h  vulkan_mesh.h  vulkan_textures.h
shaders/: rgb_triangle.frag  rgb_triangle.vert  shader.frag  shader.vert  triMesh.vert  triangle.frag  triangle.vert
src/: engine.cpp  main.cpp  vulkan_init.cpp  vulkan_mesh.cpp  vulkan_textures.cpp
